--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="resources/css/styles.css">
   <title>Document</title>
 </head>
 <body>
-  hello
+  <h1>Discover hidden places in the world around you</h1>
+  <a href="https://135a21cd58a141a18728fa75ed5ceaa1.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a>
 </body>
 </html>
