Added Header and header CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Discover hidden places in the world around you</h1>
-  <a href="https://135a21cd58a141a18728fa75ed5ceaa1.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a>
+  <header>
+    <h1>Discover hidden places in the world around you</h1>
+    <a href="https://135a21cd58a141a18728fa75ed5ceaa1.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a>
+  </header>
+  
+  
+
 </body>
 </html>
