Added video and first section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
     <h1>Discover hidden places in the world around you</h1>
     <a href="https://135a21cd58a141a18728fa75ed5ceaa1.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a>
   </header>
-  
+  <section>
+    <p>
+      <video src="resources/media/video/excursion.mp4" alt="" autoplay loop></video>
+    </p>
+  </section>
+  <section>
+    <h1>Your personal travel guide</h1>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+  </section>
   
 
 </body>
