added header--secondary and p styles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </p>
   </section>
   <section>
-    <h1>Your personal travel guide</h1>
+    <h1 class="header--secondary">Your personal travel guide</h1>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
   </section>
   
