added img to second section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <section>
     <h1 class="header--secondary">Your personal travel guide</h1>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p>
+      <img src="resources/media/images/camp.jpeg" alt="">
+    </p>
   </section>
   
 
