added footer in html and copyright style

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Discover hidden places in the world around you</h1>
-    <a href="https://135a21cd58a141a18728fa75ed5ceaa1.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a>
+    <a href="https://r3vert.github.io/Excursion/">Download Excursion (Coming soon!)</a>
   </header>
   <section>
     <p>
@@ -24,6 +24,14 @@
       <img src="resources/media/images/camp.jpeg" alt="">
     </p>
   </section>
+  <footer>
+    <p>
+      <img src="resources/media/images/phone.webp" alt="">
+    </p>
+    <h1 class="header--secondary">Coming Soon for iPhone and Android</h1>
+    <a href="https://r3vert.github.io/Excursion/">Download Excursion (Coming soon!)</a>
+    <p class="copyright">&copy; Excursion</p>
+  </footer>
   
 
 </body>
